--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,6 @@ jobs:
           files: |
             artifacts/multi-mongocompare_linux_amd64/multi-mongocompare_linux_amd64
             artifacts/multi-mongocompare_macos_amd64/multi-mongocompare_macos_amd64
-            artifacts/multi-mongocompare_macos_arm64/multi-mongocompare_macos_arm64 # Corrected path
+            artifacts/multi-mongocompare_macos_arm64/multi-mongocompare_macos_arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is automatically provided
